--- a/custom-style.css
+++ b/custom-style.css
@@ -108,8 +108,12 @@ a:hover {
   outline: none;
 }
 .media-width {
-  max-width: 100px;
-  min-width: 100px;
+  max-width: 150px;
+  min-width: 150px;
+}
+.media-width img {
+  height:100%;
+  object-fit: cover;
 }
 .post-tagline {
   margin-top: 6px;
