--- a/custom-style.css
+++ b/custom-style.css
@@ -112,7 +112,7 @@ a:hover {
   min-width: 150px;
 }
 .media-width img {
-  height:100%;
+  height: 100%;
   object-fit: cover;
 }
 .post-tagline {
@@ -2139,7 +2139,7 @@ section.porta_section article.gue_leftmain.line_leftGu > h3::before {
 .news_sidebar .justin_single ul li span {
   color: #000;
   margin-top: 3px;
-  width:35px;
+  width: 35px;
 }
 .news_sidebar .justin_single ul li h6 a {
   font-size: 16px;
@@ -5687,6 +5687,94 @@ input.contact-submit-btn {
   text-transform: uppercase;
   font-size: 18px;
 }
+.key-points-section {
+  background-color: #f2f2f2;
+  padding: 20px 30px;
+}
+.key-points-section .key-points-title {
+  font-size: 24px;
+  position: relative;
+  padding-bottom: 15px;
+  margin-bottom: 30px;
+}
+.key-points-section .key-points-title:after {
+  content: "";
+  width: 40px;
+  height: 3px;
+  background-color: #567076;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.key-points-section .key-points-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding-left: 10px;
+}
+.key-points-section .key-points-item .key-points-item-content {
+  display: flex;
+  gap: 5px;
+  position: relative;
+  flex-wrap: wrap;
+  padding-left: 10px;
+}
+.key-points-section .key-points-item .key-points-item-content:before {
+  content: "";
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+  background-color: #567076;
+  margin-top: 5px;
+  left: -10px;
+  position: absolute;
+}
+.key-points-section
+  .key-points-item
+  .key-points-item-content
+  .key-points-item-link {
+  font-size: 14px;
+  color: #3d59e2;
+  font-weight: 600;
+}
+.key-points-section
+  .key-points-item
+  .key-points-item-content
+  .key-points-item-link
+  .chevron-down {
+  border: 1px solid #3d59e2;
+  width: 14px;
+  display: inline-flex;
+  height: 14px;
+  justify-content: center;
+  align-items: center;
+  font-size: 8px;
+  border-radius: 100%;
+}
+.key-points-section .key-points-item .key-points-item-title {
+  font-size: 16px;
+  margin-bottom: 0;
+}
+.timeline {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  padding-bottom: 40px;
+}
+.timeline-item .timeline-header .timeline-time {
+  font-size: 24px;
+}
+.inner-content p {
+  display: none;
+}
+.inner-content p:nth-of-type(1),
+.inner-content p:nth-of-type(2),
+.inner-content p:nth-of-type(3) {
+  display: block;
+}
+
+/* Responsive */
 @media (min-width: 992px) {
   .category-wide-section {
     flex: 0 0 69.666667% !important;
