--- a/custom-style.css
+++ b/custom-style.css
@@ -5798,17 +5798,20 @@ input.contact-submit-btn {
   background-position: left 0;
   background-repeat: no-repeat;
 }
-.inner-content .wp-block-pullquote {
+.inner-content .wp-block-pullquote,
+.timeline-content .content .wp-block-pullquote {
   width: 100%;
   margin: 2rem 0;
   padding: 0 0 0 1rem;
   border: none;
   border-left: 1px solid #898989;
 }
-.inner-content .wp-block-pullquote blockquote {
+.inner-content .wp-block-pullquote blockquote,
+.timeline-content .content .wp-block-pullquote blockquote {
   text-align: left;
 }
-.inner-content .wp-block-pullquote blockquote p {
+.inner-content .wp-block-pullquote blockquote p,
+.timeline-content .content .wp-block-pullquote blockquote p {
   font-weight: 500;
   color: #131313;
   font-size: 17px;
@@ -5818,16 +5821,19 @@ input.contact-submit-btn {
   text-align: left;
   position: relative;
 }
-.inner-content .wp-block-pullquote blockquote p:before {
+.inner-content .wp-block-pullquote blockquote p:before,
+.timeline-content .content .wp-block-pullquote blockquote p:before {
   content: "« ";
   display: inline;
 }
-.inner-content .wp-block-pullquote blockquote p:after {
+.inner-content .wp-block-pullquote blockquote p:after,
+.timeline-content .content .wp-block-pullquote blockquote p:after {
   content: " »";
   display: inline;
 }
 
-.inner-content .wp-block-pullquote blockquote cite {
+.inner-content .wp-block-pullquote blockquote cite,
+.timeline-content .content .wp-block-pullquote blockquote cite {
   float: none;
   font-weight: 500;
   color: #7e7e7e;
@@ -5836,7 +5842,8 @@ input.contact-submit-btn {
   padding: 0;
 }
 
-.inner-content .wp-block-pullquote blockquote cite:before {
+.inner-content .wp-block-pullquote blockquote cite:before,
+.timeline-content .content .wp-block-pullquote blockquote cite:before {
   content: "— ";
   display: inline;
 }
@@ -5853,6 +5860,61 @@ input.contact-submit-btn {
   font-size: 14px;
   margin: 10px 0 0;
   display: inline-block;
+}
+.uk-war-title {
+  font-size: 24px;
+  text-transform: uppercase;
+}
+.live_icon:before {
+  content: "";
+  display: block;
+  width: 300%;
+  height: 300%;
+  box-sizing: border-box;
+  margin-left: -100%;
+  margin-top: -100%;
+  border-radius: 100%;
+  background-color: #c53030;
+  animation: live-icon-ring 1.25s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
+}
+.live_icon:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  border-radius: 100%;
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.3);
+  animation: live-icon-dot 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s infinite;
+}
+
+@keyframes live-icon-ring {
+  0% {
+    transform: scale(0.33);
+  }
+  80%, 100% {
+    opacity: 0;
+  }
+}
+@keyframes live-icon-dot {
+  0% {
+    transform: scale(0.8);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0.8);
+  }
+}
+body {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Responsive */
