--- a/style.css
+++ b/style.css
@@ -1984,8 +1984,11 @@ p {
 }
 
 .post-tagline {
-    color: #252525;
-	margin:0;
+    color: ##3e4960;
+	margin-bottom: 4px;
+	font-size: 12px;
+	font-weight: 700;
+	font-family: bai jamjuree;
 }
 
 .post-title {
@@ -2006,8 +2009,9 @@ p {
 
 .post-background-green {
     background-color: #58ceb6;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+	padding-right: 5px;
     margin: 0;
 	position: relative;	
 	text-transform: uppercase;
@@ -2050,8 +2054,9 @@ p {
 .post-background-yellow {
     background-color: #1a1d2e !important;
 	color: #58ceb6 !important;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+	padding-right: 5px;
     margin: 0;
 	text-transform: uppercase;
 	overflow: hidden;
@@ -2066,7 +2071,7 @@ p {
 }
 
 .post-title2 {
-    font-size: 1.1rem;
+    font-size: 16px;
     font-weight: 700;
 }
 
@@ -2082,7 +2087,7 @@ p {
 } */
 
 .post-title4 {
-    font-size: 14px !important;
+    font-size: 15px !important;
 	font-weight: 600 !important;
 }
 
@@ -2115,7 +2120,10 @@ p {
 .tag-slug,
 .tag-slug:hover {
     text-decoration: none;
-    color: unset;
+	color: #3e4960;
+	text-transform: uppercase;
+	font-size: 12px;
+	font-weight: 700;
 }
 
 
